# Remyan

./: Cargo.toml  README.md
client/: Cargo.toml  README.md
client/src/: app.rs  lib.rs  main.rs  page.rs  state.rs  ui.rs
client/src/page/: main_menu.rs  room.rs
client/src/ui/: button.rs  config.rs  container.rs  dialogue_box.rs  draw.rs  font.rs  gradient.rs  parent.rs  player_slot.rs  plus.rs  rectangle.rs  text.rs  traits.rs  widgets.rs
client/src/ui/button/: regular_button.rs
client/src/ui/config/: dimension.rs  font.rs  gradient.rs  parent.rs  position.rs
client/src/ui/traits/: click.rs  hover.rs  object.rs  press.rs
client/src/wrapper/: draw.rs
core/: Cargo.toml  README.md
core/src/: app.rs  card.rs  card_game.rs  deck.rs  lib.rs  player.rs  player_turn.rs  protocol.rs  room.rs
core/src/protocol/: command.rs  event.rs
core/src/room/: config.rs  manager.rs  player.rs
server/: Cargo.toml  README.md
server/src/: lib.rs  main.rs  router.rs  server_room.rs  ws.rs
server/src/handler/: auth.rs  room.rs  ws.rs
server/src/route/: auth.rs  mod.rs  room.rs  ws.rs
server/src/ws/: command_handler.rs  command_parser.rs  socket_handler.rs
src/: app.rs  card.rs  card_game.rs  core.rs  deck.rs  game.rs  lib.rs  main.rs  network.rs  player.rs  session.rs  session_config.rs  session_manager.rs
src/core/: app.rs  card_game.rs  deck.rs  player_turn.rs  protocol.rs  room.rs
src/core/protocol/: command.rs  event.rs
src/core/room/: config.rs  manager.rs  player.rs
src/game/: app.rs  card.rs  card_game.rs  deck.rs  player_turn.rs  room.rs  room_config.rs  room_manager.rs  room_player.rs
src/network/: network.rs  router.rs  ws.rs
src/network/handler/: auth.rs  mod.rs  room.rs  ws.rs
src/network/route/: auth.rs  room.rs  ws.rs
src/network/ws/: command_handler.rs  command_parser.rs  event_broadcaster.rs  mod.rs  socket_handler.rs
(+13 files in other folders)
