[package]
name = "remyan-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["full"] }