[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["json", "macros", "ws"] }
axum-extra = { workspace = true, features = ["cookie"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures-util = { workspace = true, default-features = false, features = ["sink"] }
remyan-core = { path = "../core" }
rand = { workspace = true }